# PointCloudCUDAOps

./: .clang-format  CMakeLists.txt  README.md  debug.rviz  package.xml
include/pointcloud_preprocessing_cuda/: cu_point_ops_wrapper.h  cu_pointcloud_ops_wrapper.h  cuda_prep_pipeline.hpp  points_ops.h
include/pointcloud_preprocessing_cuda/ros/: pointcloud_msg.hpp
launch/: point_prep_cuda.launch
src/pointcloud_preprocessing_cuda/: cuda_prep_pipeline.cpp  main.cpp  point_ops.cpp
src/pointcloud_preprocessing_cuda/kernels/: common.cu  common.cuh  concatenate.cu  crop_box.cu  motion_undistort.cu  transform.cu
src/pointcloud_preprocessing_cuda/ros/: pointcloud_msg.cu
