<?xml version="1.0"?>
<package>
    <name>pointcloud_preprocessing_cuda</name>
    <version>0.0.0</version>
    <description>The pointcloud_preprocessing_cuda package</description>

    <maintainer email="yucedago@msu.edu">Onur Can Yucedag</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>rosfmt</build_depend>
    <build_depend>tf2_eigen</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>ouster_ros</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>swri_profiler</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>rosfmt</run_depend>
    <run_depend>tf2_eigen</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>ouster_ros</run_depend>
    <run_depend>message_filters</run_depend>
    <run_depend>swri_profiler</run_depend>




    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>